New forest feature added and tested

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
         "Menuoption",
+        "Netbios",
         "Readhost",
+        "Sysvol",
         "addsadminpassword",
         "addsdomainname",
         "domainname"
